# cursor_configs

./: .gitignore  .ruff.toml  PROJECT_PLAN.md  README.md  debug_timeframe.py  pyproject.toml  pytest_output.txt  sandbox_output.txt  step_registry_test_output.txt
.cursor/rules/: agent-workflow.mdc  git.mdc  guardrails.mdc  poc.mdc  problem-solving.mdc  python.mdc  rule-creation.mdc  unit-test.mdc  unit_test.mdc  uv.mdc
.cursor/templates/: poc_brief.md  test-coverage-template.md  test_run.md
configs/: README.md  logging.json  price_feed_config.yaml  risk_config.yaml  settings.json  strategy_steps.yaml  strategy_steps.yaml.bak  trading_config.yaml
configs/portfolio/: main-portfolio.yaml
configs/providers/: csv.yaml
configs/sessions/: day_trading.yaml
configs/strategies/: sample_strategy.yaml  sample_strategy.yaml.bak  trend_following.yaml  wrb_gap_strategy.bak
docs/: testing.md
rules/: git.mdc  memory-management.mdc  rule-creation.mdc  tdd.mdc  working-memory-documentation.mdc
rules/architecture/: adapter-pattern.mdc  bridge-pattern.mdc  general.mdc  strategy-pattern.mdc
src/: __init__.py  main.py  main_wip.py  models.py  strategy.py  strategy_config.py  strategy_runner.py  utils.py  validators.py
src/core/: __init__.py  (+9 more)
templates/: poc_exit_report.md  stories-acceptance-criteria.md  test_integration.py
tests/: conftest.py  test_executor.py  test_main.py  test_models.py  test_strategy.py  test_strategy_config.py  test_strategy_context.py  test_strategy_execution.py  test_strategy_runner.py  test_strategy_utils.py  test_utils.py  test_validators.py
(+261 files in other folders)
